--- a/styleroot.css
+++ b/styleroot.css
@@ -1,9 +1,18 @@
 form { text-align: center;
-justify-content:center;}
+margin-bottom:17%;
+margin-top:13px;}
+html {
+background-image:url(math.jpeg);
+background-size: cover ;
+background-attachment: fixed;
+background-position: center;
+}
+header{
+color: blue;}
 input:invalid {background-color: rgb(255, 220, 220);}
 input:valid {background-color:blue;}
 input { border: solid purple ;}
-alert { border-radius: 10%;
-width: 400px;
-height: 300px;
-text-align: right; }
+footer {margin-bottom:none;
+font-size: small;}
+.bla {color: green;}
+
