trying to fix screen different sizes issue

--- a/styleroot.css
+++ b/styleroot.css
@@ -7,7 +7,7 @@ background-size: cover ;
 background-attachment: fixed;
 background-position: center;
 }
-.smaller { 
+smaller{ 
 width:40;
 height: 500;}
 header{
